# wdb-locationforecastLoad

./: .gitignore  Makefile.am  README  configure.ac  debian.mk
debian_files/: changelog  control  copyright  rules
etc/: locationForecastLoad.conf.xml  locationforecastLoad.conf.xml  locationforecastLoad.conf.xsd  make.mk
m4/: googletest.m4
src/: main.cpp  make.mk
src/configuration/: LoaderConfiguration.cpp  LoaderConfiguration.h  LocationforecastConfiguration.cpp  LocationforecastConfiguration.h  make.mk
src/datahandler/: FastLoadDataHandlingStrategy.cpp  FastLoadDataHandlingStrategy.h  make.mk
src/datahandler/list/: PrintingDataHandlingStrategy.cpp  PrintingDataHandlingStrategy.h
src/datahandler/save/: OutputMode.h  SaveDataTransactor.cpp  SaveDataTransactor.h  SavingDataHandlingStrategy.cpp  SavingDataHandlingStrategy.h  queries.cpp  queries.h
src/locationforecast/: DataElement.cpp  DataElement.h  Document.cpp  Document.h  LocationForecastException.h  TimeRange.cpp  TimeRange.h  make.mk
src/locationforecast/elementhandler/: ElementHandler.h  SimpleElementHandler.cpp  SimpleElementHandler.h  UnitSpecializedElementHandler.cpp  UnitSpecializedElementHandler.h
src/locationforecast/parser/: BoostPropertyTreeLocationForecastParser.cpp  BoostPropertyTreeLocationForecastParser.h  LibxmlLocationForecastParser.cpp  LibxmlLocationForecastParser.h  LocationForecastParser.h  LocationforecastConfiguration.cpp  LocationforecastConfiguration.h  make.mk
src/types/: Point.cpp  Point.h  make.mk
src/wdb_access/: WdbSaveSpecification.cpp
src/wdb_data/: WdbSaveSpecification.cpp  WdbSaveSpecification.h  WdbSaveSpecificationFactory.cpp  WdbSaveSpecificationFactory.h  make.mk
src/wdb_data/element/: ConfigurationElement.cpp  ConfigurationElement.h  IgnoreConfigurationElement.h  NormalConfigurationElement.cpp  NormalConfigurationElement.h
test/: DataElementTest.cpp  DocumentTest.cpp  WdbSaveSpecificationFactoryTest.cpp  make.mk
test/etc/: corrupt_document.xml  make.mk  one_element_document.xml  real_example.xml  small_document.xml
wdb-locationforecastLoad/: .gitignore  Makefile.am  configure.ac
wdb-locationforecastLoad/etc/: locationForecastLoad.conf.xml
wdb-locationforecastLoad/src/: Loader.cpp  Loader.h  main.cpp
wdb-locationforecastLoad/src/configuration/: LoaderConfiguration.cpp  LoaderConfiguration.h  WdbSaveSpecification.cpp  WdbSaveSpecification.h  WdbSaveSpecificationFactory.cpp  WdbSaveSpecificationFactory.h  xmlutil.cpp  xmlutil.h
wdb-locationforecastLoad/src/configuration/element/: ConfigurationElement.cpp  ConfigurationElement.h  NormalConfigurationElement.cpp
wdb-locationforecastLoad/src/datahandler/: DataHandlingStrategy.h  PrintingDataHandlingStrategy.cpp  PrintingDataHandlingStrategy.h  SavingDataHandlingStrategy.cpp  SavingDataHandlingStrategy.h
wdb-locationforecastLoad/src/datahandler/list/: PrintingDataHandlingStrategy.h
wdb-locationforecastLoad/src/datahandler/save/: SaveDataTransactor.cpp  SaveDataTransactor.h  SavingDataHandlingStrategy.cpp  SavingDataHandlingStrategy.h
wdb-locationforecastLoad/src/locationforecast/: DataElement.cpp  DataElement.h  Document.cpp  Document.h  TimeRange.h  make.mk  parse_document.cpp  parse_document.h
wdb-locationforecastLoad/src/locationforecast/elementhandler/: ElementHandler.cpp  ElementHandler.h  SimpleElementHandler.cpp  SimpleElementHandler.h  UnitSpecializedElementHandler.h
wdb-locationforecastLoad/src/wdb_access/: WdbSaveSpecificationFactory.cpp  make.mk  xmlutil.h
wdb-locationforecastLoad/src/wdb_access/element/: IgnoreConfigurationElement.h  NormalConfigurationElement.h
wdb-locationforecastLoad/test/: DocumentTest.cpp  WdbSaveSpecificationFactoryTest.cpp  make.mk
wdb-locationforecastLoad/test/etc/: make.mk
wdb-locationforecastLoad/test/locationforecast/: DataElementTest.cpp  DocumentTest.cpp  WdbSaveSpecificationFactoryTest.cpp  empty_document.xml
wdb-locationforecastLoad/test/locationforecast/etc/: one_element_document.xml
